<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="30dp"
    android:paddingTop="100dp"
    android:paddingBottom="60dp"
    tools:context=".ui.activity.LoginActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@mipmap/ic_launcher_foreground"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_logo"
        android:background="@drawable/style_radius_8_white"
        android:orientation="vertical"
        android:paddingHorizontal="15dp"
        android:paddingVertical="20dp">

        <auto.base.ui.view.EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="sans-serif-light"
            android:hint="@string/str_input_hint_ip"
            android:imeOptions="actionNext"
            android:lines="1"
            android:paddingHorizontal="6dp"
            android:paddingVertical="7dp"
            android:singleLine="true"
            android:textColor="@color/text_color_49"
            android:textSize="18sp" />

        <auto.base.ui.view.EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="sans-serif-light"
            android:hint="@string/str_username"
            android:imeOptions="actionNext"
            android:inputType="textVisiblePassword"
            android:lines="1"
            android:paddingHorizontal="6dp"
            android:paddingVertical="7dp"
            android:singleLine="true"
            android:textColor="@color/text_color_49"
            android:textSize="18sp" />

        <auto.base.ui.view.EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:fontFamily="sans-serif-light"
            android:hint="@string/str_password"
            android:imeOptions="actionDone"
            android:inputType="textVisiblePassword"
            android:lines="1"
            android:paddingHorizontal="6dp"
            android:paddingVertical="7dp"
            android:singleLine="true"
            android:textColor="@color/text_color_49"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/bt_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/style_button_blue"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:paddingVertical="8dp"
                android:text="@string/action_login"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/bt_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/style_button_white"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:paddingVertical="8dp"
                android:text="@string/action_register"
                android:textColor="@color/text_color_49"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>