<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/common_item_margin_horizontal"
    android:layout_marginTop="@dimen/common_item_margin_top"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/common_item_padding_horizontal"
    android:paddingTop="@dimen/common_item_padding_top"
    android:paddingBottom="@dimen/common_item_padding_bottom">

    <TextView
        android:id="@+id/login_log_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/theme_blue_shadow"
        android:textSize="17sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_thickness"
        android:layout_marginBottom="7dp"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/item_login_log_time"
            android:textColor="@color/text_color_49" />

        <TextView
            android:id="@+id/login_log_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAlignment="viewEnd"
            android:textColor="@color/text_color_49" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/item_login_log_address"
            android:textColor="@color/text_color_49" />

        <TextView
            android:id="@+id/login_log_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:textAlignment="viewEnd"
            android:textColor="@color/text_color_49" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/item_login_log_ip"
            android:textColor="@color/text_color_49" />

        <TextView
            android:id="@+id/login_log_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:textColor="@color/text_color_49" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/item_login_log_platform"
            android:textColor="@color/text_color_49" />

        <TextView
            android:id="@+id/login_log_platform"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:textColor="@color/text_color_49" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="登录状态"
            android:textColor="@color/text_color_49" />

        <TextView
            android:id="@+id/login_log_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:textColor="@color/text_color_49" />
    </LinearLayout>
</LinearLayout>